# red-duck

./: .pre-commit-config.yaml  README.md  demo.py  noxfile.py  pyproject.toml  requirements.dev.txt  requirements.txt
nox_extra/: nox_codecheck_sessions.py  nox_precommit_sessions.py  nox_utils.py
src/red_duck/: __init__.py  client.py  controllers.py
tests/: conftest.py  test_dummy.py
tests/fixtures/: __init__.py  dummy_fixtures.py
